--- a/task8/index.html
+++ b/task8/index.html
@@ -11,6 +11,35 @@
     <style type="text/css">
         body{
             background-color: #fafafa;
+            font-family:微软雅黑;
+        }
+        h1{
+            margin-bottom: 50px;
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+        }
+        h2{
+            margin-bottom: 50px;
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+        }
+        h3{
+            margin-bottom: 50px;
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+        }
+        h4{
+            margin-top: 50px ;
+            margin-bottom: 0;
+            padding: 30px 0;
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+            background-color: #ffffff;
+
         }
         header span{
             line-height: 40px;
@@ -36,6 +65,8 @@
             float: right;
         }
         nav a{
+            font-weight: bold;
+            font-size: 16px;
             padding:20px ;
             display: block;
             color: #ffffff;
@@ -56,7 +87,7 @@
         }
         .main-content{
             text-align: center;
-            padding: 15% 0;
+            padding: 7% 0;
         }
         .main-content-img img{
             height:48px
@@ -64,12 +95,15 @@
         .main-content-span{
             display: block;
             padding:20px 0;
+            font-size: 16px;
+            font-weight: bold;
         }
         .main-content-p{
             display: inline-block;
             width:220px;
+            height:40px;
             color:#999999;
-            font-size: 10px;
+            font-size: 14px;
             letter-spacing: 2px;
             line-height: 1.5;
             margin-bottom: 15%;
@@ -100,7 +134,7 @@
         }
         .process p{
             display: inline-block;
-            width: 150px;
+            width: 40%;
             font-size: 10px;
             vertical-align: middle;
             letter-spacing: 2px;
@@ -112,16 +146,24 @@
         .process img{
             margin-right: 10px;
         }
-        .col-style{
+        .col-style1{
             padding: 0;
             margin-bottom: 10%;
             text-align: center;
         }
+        .col-style2{
+            padding: 0;
+            margin-bottom: 5%;
+            text-align: center;
+        }
         .student-content{
             text-align: center;
-            margin: 5px;
+            width:222px;
+            padding: 30px;
+            margin: 0 auto ;
             border:solid 1px #ebebeb;
             box-shadow: 0 0 5px #ebebeb;
+            background-color: #ffffff;
         }
         .student-img{
             width:70px;
@@ -129,16 +171,92 @@
             border-radius: 50%;
             background: url("images/student1.png") no-repeat;
             background-size:100% ;
-            display: inline-block        }
+            display: inline-block;
+        }
         .student span{
             display: block;
+            padding: 15px 0;
+            font-weight: bold;
+            font-size: 16px;
         }
         .student p{
             text-align: left;
+            margin: 0;
+            color: #999999;
+        }
+        .student ul{
+            padding:2% 0;
+            margin: 0 auto;
+            width:75px;
+            overflow: hidden;
+        }
+        .student li{
+            width: 14px;
+            height:14px;
+            margin: 2px;
+            border-radius: 50%;
+            border:solid 1px #ebebeb;
+            list-style-type: none;
+            background-color: #ffffff;
+            box-shadow: 0 0 5px #ebebeb;
+            float: left;
+            cursor:pointer;
+        }
+        .student li:hover{
+            background-color:#29b078 ;
+        }
+        .link{
+            background-color: #ffffff;
         }
         .link li{
             float: left;
-            padding:2%;
+            margin:10px 20px;
+            width: 60px;
+            color: #999999;
+        }
+        .link li a{
+            color: #999999;
+        }
+        .cooperation img{
+            width: 100%;
+        }
+        .footer{
+            background-color:#29b078 ;
+            padding: 80px 0;
+        }
+        .contact{
+            color: #ffffff;
+        }
+        .contact p{
+            font-size: 16px;
+            margin-bottom: 50px;
+        }
+        .contact a{
+            color:#ffffff
+        }
+        .net{
+            color: #ffffff;
+        }
+        .net p{
+            font-size: 16px;
+            margin-bottom: 30px;
+        }
+        .net a{
+            display: inline-block;
+            margin-bottom: 10px;
+            color: #ffffff;
+        }
+        .weixin p{
+            font-size: 16px;
+            color: #FFFFFF;
+        }
+        .copyright{
+            margin: 0;
+            background-color:#29b078 ;
+            color: #ffffff;
+            font-size: 10px;
+            padding: 2px 0;
+            border-top:#32c086 solid 1px ;
         }
     </style>
 </head>
@@ -198,22 +316,22 @@
 </div>
 <div class="container main-content">
     <div class="row">
-        <div class="col-md-3 ">
+        <div class="col-md-3 col-sm-6">
             <div class="main-content-img"><img src="images/高效.png"></div>
             <span class="main-content-span">高效</span>
             <p class="main-content-p text-left">将五到七年的成长时间，缩短到一年到三年</p>
         </div>
-        <div class="col-md-3 ">
+        <div class="col-md-3 col-sm-6">
             <div class="main-content-img"><img src="images/规范.png"></div>
             <span class="main-content-span">规范</span>
             <p class="main-content-p">标准的实战教程，不会走弯路</p>
         </div>
-        <div class="col-md-3 ">
+        <div class="col-md-3 col-sm-6">
             <div class="main-content-img"><img src="images/人脉.png"></div>
             <span class="main-content-span">人脉</span>
             <p class="main-content-p text-left">同班好友，同院学长，技术大师，入学就混入职脉圈，为以后铺平道路</p>
         </div>
-        <div class="col-md-3 hidden-xs ">
+        <div class="col-md-3 hidden-xs col-sm-6">
             <div class="text-left user">
                 <img src="images/user.png">
                 <span>12400</span>
@@ -231,43 +349,41 @@
 <div class="process">
     <div class="container">
         <div class="row">
-            <div class="col-md-3  col-style">
+            <div class="col-md-3 col-sm-4 col-style1">
                 <div class="circle" style="margin-left: 45px">1</div>
                 <p>匹配你现在的个人情况寻找合适自己的岗位</p>
             </div>
-            <div class="col-md-3  col-style">
+            <div class="col-md-3 col-sm-4 col-style1">
                 <img src="images/trainright.png">
                 <div class="circle">1</div>
                 <p>匹配你现在的个人情况寻找合适自己的岗位</p>
             </div>
-            <div class="col-md-3  col-style">
+            <div class="col-md-3 col-sm-4 col-style1">
                 <img src="images/trainright.png">
                 <div class="circle">1</div>
                 <p>匹配你现在的个人情况寻找合适自己的岗位</p>
             </div>
-            <div class="col-md-3  col-style">
+            <div class="col-md-3 col-sm-4 col-style1">
                 <img src="images/trainright.png">
                 <div class="circle">1</div>
                 <p>匹配你现在的个人情况寻找合适自己的岗位</p>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3  col-style">
+            <div class="col-md-3 col-sm-4 col-style1">
                 <img src="images/trainright.png">
                 <div class="circle">1</div>
                 <p>匹配你现在的个人情况寻找合适自己的岗位</p>
             </div>
-            <div class="col-md-3 col-style">
+            <div class="col-md-3 col-sm-4 col-style1">
                 <img src="images/trainright.png">
                 <div class="circle">1</div>
                 <p>匹配你现在的个人情况寻找合适自己的岗位</p>
             </div>
-            <div class="col-md-3 col-style">
+            <div class="col-md-3 col-sm-4 col-style1">
                 <img src="images/trainright.png">
                 <div class="circle">1</div>
                 <p>匹配你现在的个人情况寻找合适自己的岗位</p>
             </div>
-            <div class="col-md-3 col-style">
+            <div class="col-md-3 col-sm-4 col-style1">
                 <img src="images/trainright.png">
                 <div class="circle">1</div>
                 <p>匹配你现在的个人情况寻找合适自己的岗位</p>
@@ -278,28 +394,28 @@
 <h2>优秀学员</h2>
 <div class="student">
     <div class="container">
-        <div class="col-md-3 col-style">
+        <div class="col-md-3 col-sm-6 col-style2" >
             <div class="student-content">
                 <div class="student-img"></div>
-                <span>罗大佑</span>
+                <span>技术顾问：罗大佑</span>
                 <p>百度技术总监：互联网基础服务领域，从事虚拟主机、 云服务器、域名。曾任新网高级技术经理，负责技术研发、团队管理与建设。</p>
             </div>
         </div>
-        <div class="col-md-3 col-style">
+        <div class="col-md-3 col-sm-6 col-style2">
             <div class="student-content">
                 <div class="student-img"></div>
-                <span>罗大佑</span>
+                <span>技术顾问：罗大佑</span>
                 <p>百度技术总监：互联网基础服务领域，从事虚拟主机、 云服务器、域名。曾任新网高级技术经理，负责技术研发、团队管理与建设。</p>
             </div>
         </div>
-        <div class="col-md-3 col-style">
+        <div class="col-md-3 col-sm-6 col-style2">
             <div class="student-content">
                 <div class="student-img"></div>
-                <span>罗大佑</span>
+                <span>技术顾问：罗大佑</span>
                 <p>百度技术总监：互联网基础服务领域，从事虚拟主机、 云服务器、域名。曾任新网高级技术经理，负责技术研发、团队管理与建设。</p>
             </div>
         </div>
-        <div class="col-md-3 col-style">
+        <div class="col-md-3 col-sm-6 col-style2">
             <div class="student-content">
                 <div class="student-img"></div>
                 <span>罗大佑</span>
@@ -307,6 +423,12 @@
             </div>
         </div>
     </div>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 </div>
 <h3>合作企业</h3>
 <div class="cooperation">
@@ -317,7 +439,6 @@
 <h4>友情链接</h4>
 <div class="link">
     <div class="container">
-        <div class="row">
             <ul>
                 <li><a href="#">手机软件</a></li>
                 <li><a href="#">手机软件</a></li>
@@ -329,9 +450,35 @@
                 <li><a href="#">手机软件</a></li>
                 <li><a href="#">手机软件</a></li>
                 <li><a href="#">手机软件</a></li>
+                <li><a href="#">手机软件</a></li>
+                <li><a href="#">手机软件</a></li>
             </ul>
+    </div>
+</div>
+<div class="footer">
+    <div class="container">
+        <div class="col-md-4 contact">
+            <p>技能树改变你我</p>
+            <a href="#">关于我们</a>
+            &nbsp;|&nbsp;
+            <a href="#">联系我们</a>
+            &nbsp;|&nbsp;
+            <a href="#">合作企业</a>
+        </div>
+        <div class="col-md-4 net">
+            <p>旗下网站</p>
+            <a href="#">草船云孵化器&nbsp;&nbsp;</a>
+            <a href="#">最强IT特训营</a>
+            <br>
+            <a href="#">草船云孵化器&nbsp;&nbsp;</a>
+            <a href="#">最强IT特训营</a>
+        </div>
+        <div class="col-md-4 weixin">
+            <p>微信公众号</p>
+            <img src="images/footer.png">
         </div>
     </div>
 </div>
+<p class="copyright text-center">Copyright © 2015技能树 www.jnshu.com All Rights Reserved | 京ICP备13005880号</p>
 </body>
 </html>
