--- a/task8/index.html
+++ b/task8/index.html
@@ -51,6 +51,9 @@
             text-align: right;
             line-height: 40px;
         }
+        .navbar-header img{
+            padding-top: 10px;
+        }
         nav ul {
             list-style: none;
             margin-bottom: 0;
@@ -60,9 +63,6 @@
             margin-bottom: 0;
             border:0;
             border-radius: 0;
-        }
-        nav li{
-            float: right;
         }
         nav a{
             font-weight: bold;
@@ -277,14 +277,26 @@
         </div>
     </div>
 </header>
-<nav class="navbar navbar-default nav-style">
-    <div class="container" >
-        <ul class="col-md-4 col-md-offset-8 " style="padding: 0">
+<nav class="navbar navbar-default nav-style" role="navigation">
+    <div class="container-fluid" >
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#example-navbar-collapse">
+                <span class="sr-only">切换导航</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <img class="navbar-brand" src="images/logo.png">
+        </div>
+        <div class="collapse navbar-collapse pull-right" id="example-navbar-collapse">
+        <ul class="nav navbar-nav" style="padding: 0">
             <li><a href="#">关于</a></li>
             <li><a href="#">推荐</a></li>
             <li><a href="#">职业</a></li>
             <li><a href="#" class="active">首页</a></li>
         </ul>
+        </div>
     </div>
 </nav>
 <div id="myCarousel" class="carousel slide" >
