--- a/task8/index.html
+++ b/task8/index.html
@@ -8,10 +8,35 @@
     <link href="bootstrap.min.css" rel="stylesheet">
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
+
     <style type="text/css">
+        @media screen and (max-width: 768px) {
+            .container .navbar-collapse{
+                width: 100%;
+                margin: 0;
+            }
+            .navbar-default  ul {
+                width: 100%;
+                margin: 0;
+            }
+            .navbar-default .navbar-nav li{
+                width: 100%;
+                text-align: center;
+            }
+            .container .user{
+                padding-left:35% ;
+            }
+        }
+        @media screen and (min-width: 769px){
+            .navbar-brand{
+                position: absolute;
+                top: 50%;
+                margin-top:-25px ;
+            }
+        }
         body{
             background-color: #fafafa;
-            font-family:微软雅黑;
+            font-family:" Microsoft YaHei";
         }
         h1{
             margin-bottom: 50px;
@@ -51,12 +76,21 @@
             text-align: right;
             line-height: 40px;
         }
-        .navbar-header img{
-            padding-top: 10px;
+        .navbar-default .navbar-toggle{
+            background-color:#29b078 ;
+            border:none;
+            margin-right: 15px;
         }
-        nav ul {
-            list-style: none;
-            margin-bottom: 0;
+        .navbar-default .navbar-toggle:hover,
+        .navbar-default .navbar-toggle:focus {
+            background-color: #29b078;
+        }
+        .navbar-default .navbar-toggle .icon-bar{
+            background-color: #ffffff;
+        }
+        .navbar-brand{
+            padding:5px 15px ;
+
         }
         .nav-style{
             background-color: #29b078;
@@ -64,26 +98,22 @@
             border:0;
             border-radius: 0;
         }
-        nav a{
+        .navbar-default .navbar-nav li a{
             font-weight: bold;
             font-size: 16px;
-            padding:20px ;
-            display: block;
+            padding:30px 20px ;
             color: #ffffff;
             cursor: pointer;
             border-bottom: solid #29b078;
-        }
-        nav a:link{
             text-decoration: none;
         }
-        nav a:visited{
-            text-decoration: none;
-            color:#ffffff;
-        }
-        nav a:hover {
+        .navbar-default .navbar-nav li a:hover{
             text-decoration: none;
             color:#ffffff;
             border-bottom: solid #ffffff;
+        }
+        .navbar-default .navbar-nav li a:focus{
+            color: #ffffff;
         }
         .main-content{
             text-align: center;
@@ -112,7 +142,7 @@
             padding-left: 60px;
             padding-top: 20px;
             border-left:#dedede dashed 1px;
-
+            text-align: left;
         }
         .user span{
             display: inline-block;
@@ -134,7 +164,7 @@
         }
         .process p{
             display: inline-block;
-            width: 40%;
+            width: 43%;
             font-size: 10px;
             vertical-align: middle;
             letter-spacing: 2px;
@@ -217,8 +247,17 @@
         .link li a{
             color: #999999;
         }
-        .cooperation img{
+        .cooperation a{
+            display: inline-block;
+            width: 19%;
+            height: 98px;
+        }
+        .cooperation a:hover{
+            box-shadow: -2px 0 5px  rgba(235,234,234,0.7), 2px  0 5px  rgba(235,234,234,0.7);
+        }
+        .cooperation a img{
             width: 100%;
+            height: 100%;
         }
         .footer{
             background-color:#29b078 ;
@@ -278,23 +317,23 @@
     </div>
 </header>
 <nav class="navbar navbar-default nav-style" role="navigation">
-    <div class="container-fluid" >
+    <div class="container" >
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse"
-                    data-target="#example-navbar-collapse">
-                <span class="sr-only">切换导航</span>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
             <img class="navbar-brand" src="images/logo.png">
         </div>
-        <div class="collapse navbar-collapse pull-right" id="example-navbar-collapse">
+        <div class="collapse navbar-collapse pull-right" style="padding: 0" id="navbar-collapse">
         <ul class="nav navbar-nav" style="padding: 0">
+            <li><a href="#" style="border-bottom:  solid #ffffff">首页</a></li>
+            <li><a href="task8-2.html">职业</a></li>
+            <li><a href="task8-3.html">推荐</a></li>
             <li><a href="#">关于</a></li>
-            <li><a href="#">推荐</a></li>
-            <li><a href="#">职业</a></li>
-            <li><a href="#" class="active">首页</a></li>
         </ul>
         </div>
     </div>
@@ -327,7 +366,6 @@
     </a>
 </div>
 <div class="container main-content">
-    <div class="row">
         <div class="col-md-3 col-sm-6">
             <div class="main-content-img"><img src="images/高效.png"></div>
             <span class="main-content-span">高效</span>
@@ -343,64 +381,61 @@
             <span class="main-content-span">人脉</span>
             <p class="main-content-p text-left">同班好友，同院学长，技术大师，入学就混入职脉圈，为以后铺平道路</p>
         </div>
-        <div class="col-md-3 hidden-xs col-sm-6">
-            <div class="text-left user">
+        <div class="col-md-3  col-sm-6">
+            <div class=" user">
                 <img src="images/user.png">
                 <span>12400</span>
                 <p>累计在线学习人数</p>
             </div>
-            <div class="text-left user">
+            <div class=" user">
                 <img src="images/user.png">
                 <span>12400</span>
                 <p>学员已经找到满意工作</p>
             </div>
         </div>
-    </div>
 </div>
 <h1>如何学习</h1>
 <div class="process">
     <div class="container">
-        <div class="row">
             <div class="col-md-3 col-sm-4 col-style1">
                 <div class="circle" style="margin-left: 45px">1</div>
                 <p>匹配你现在的个人情况寻找合适自己的岗位</p>
             </div>
             <div class="col-md-3 col-sm-4 col-style1">
                 <img src="images/trainright.png">
-                <div class="circle">1</div>
-                <p>匹配你现在的个人情况寻找合适自己的岗位</p>
+                <div class="circle">2</div>
+                <p>了解职业前景薪金待遇、竞争压力等</p>
             </div>
             <div class="col-md-3 col-sm-4 col-style1">
                 <img src="images/trainright.png">
-                <div class="circle">1</div>
-                <p>匹配你现在的个人情况寻找合适自己的岗位</p>
+                <div class="circle">3</div>
+                <p>掌握行业内顶级技能</p>
             </div>
             <div class="col-md-3 col-sm-4 col-style1">
                 <img src="images/trainright.png">
-                <div class="circle">1</div>
-                <p>匹配你现在的个人情况寻找合适自己的岗位</p>
+                <div class="circle">4</div>
+                <p>查看职业目标任务</p>
             </div>
             <div class="col-md-3 col-sm-4 col-style1">
                 <img src="images/trainright.png">
-                <div class="circle">1</div>
-                <p>匹配你现在的个人情况寻找合适自己的岗位</p>
+                <div class="circle">5</div>
+                <p>参考学习资源 ，掌握技能点，逐个完成任务</p>
             </div>
             <div class="col-md-3 col-sm-4 col-style1">
                 <img src="images/trainright.png">
-                <div class="circle">1</div>
-                <p>匹配你现在的个人情况寻找合适自己的岗位</p>
+                <div class="circle">6</div>
+                <p>加入班级，和小伙伴们互帮互助，一块学习</p>
             </div>
             <div class="col-md-3 col-sm-4 col-style1">
                 <img src="images/trainright.png">
-                <div class="circle">1</div>
-                <p>匹配你现在的个人情况寻找合适自己的岗位</p>
+                <div class="circle">7</div>
+                <p>选择导师，一路引导，加速自己成长</p>
             </div>
             <div class="col-md-3 col-sm-4 col-style1">
                 <img src="images/trainright.png">
-                <div class="circle">1</div>
-                <p>匹配你现在的个人情况寻找合适自己的岗位</p>
+                <div class="circle">8</div>
+                <p>完成职业技能，升级业界大牛</p>
             </div>
-        </div>
     </div>
 </div>
 <h2>优秀学员</h2>
@@ -445,7 +480,11 @@
 <h3>合作企业</h3>
 <div class="cooperation">
     <div class="container">
-        <img src="images/partner.png">
+        <a href="#"><img src="images/技能树首页2_13.png"></a>
+        <a href="#"><img src="images/技能树首页2_15.png"></a>
+        <a href="#"><img src="images/技能树首页2_17.png"></a>
+        <a href="#"><img src="images/技能树首页2_20.png"></a>
+        <a href="#"><img src="images/技能树首页2_23.png"></a>
     </div>
 </div>
 <h4>友情链接</h4>
