--- a/task8/task8-2.html
+++ b/task8/task8-2.html
@@ -6,52 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>task8-2</title>
     <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="task8%20header+nav.css" rel="stylesheet">
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
     <style type="text/css">
-        header span{
-            line-height: 40px;
-            font-weight:bolder;
-            float: left;
-            color:#97d2b5;
-        }
-        .img-wrap{
-            text-align: right;
-            line-height: 40px;
-        }
-        nav ul {
-            list-style: none;
-            margin-bottom: 0;
-        }
-        .nav-style{
-            background-color: #29b078;
-            margin-bottom: 0;
-            border:0;
-            border-radius: 0;
-        }
-        nav li{
-            float: right;
-        }
-        nav a{
-            font-weight: bold;
-            font-size: 16px;
-            padding:20px ;
-            display: block;
-            color: #ffffff;
-            cursor: pointer;
-            border-bottom: solid #29b078;
-        }
-        nav a:link{
-            text-decoration: none;
-        }
-        nav a:visited{
-            text-decoration: none;
-            color:#ffffff;
-        }
-        nav a:hover {
-            text-decoration: none;
-            color:#ffffff;
-            border-bottom: solid #ffffff;
+        body{
+           font-family:  Microsoft YaHei
         }
         .main-content-p1{
             margin:  0;
@@ -220,14 +180,25 @@
         </div>
     </div>
 </header>
-<nav class="navbar navbar-default nav-style">
+<nav class="navbar navbar-default nav-style" role="navigation">
     <div class="container" >
-        <ul class="col-md-4 col-md-offset-8 " style="padding: 0">
-            <li><a href="#">关于</a></li>
-            <li><a href="#">推荐</a></li>
-            <li><a href="#">职业</a></li>
-            <li><a href="#" class="active">首页</a></li>
-        </ul>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <img class="navbar-brand" src="images/logo.png">
+        </div>
+        <div class="collapse navbar-collapse pull-right" style="padding: 0" id="example-navbar-collapse">
+            <ul class="nav navbar-nav" style="padding: 0">
+                <li><a href="index.html" >首页</a></li>
+                <li><a href="#" style="border-bottom:  solid #ffffff">职业</a></li>
+                <li><a href="task8-3.html">推荐</a></li>
+                <li><a href="#">关于</a></li>
+            </ul>
+        </div>
     </div>
 </nav>
 <div class="main-content">
