--- a/task8/task8-3.html
+++ b/task8/task8-3.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>task8-3</title>
     <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="task8%20header+nav.css" rel="stylesheet">
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
     <style type="text/css">
         body{
             background-color: #fafafa;
+            font-family: Microsoft YaHei;
         }
         .banner{
             width: 100%;
@@ -85,6 +87,9 @@
         .content-left li:hover{
             list-style-image: url("images/实心圆.png");
         }
+        .content-left .active{
+            list-style-image: url("images/实心圆.png");
+        }
         .footer{
             background-color:#29b078 ;
             padding: 40px 0;
@@ -126,6 +131,43 @@
     </style>
 </head>
 <body>
+<header>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5 ">
+                <span>咨询电话：010-594-78634</span>
+            </div>
+            <div class="col-md-7">
+                <div class="img-wrap">
+                    <a href="#"><img src="images/微信.png"></a>
+                    <a href="#"><img src="images/QQ.png"></a>
+                    <a href="#"><img src="images/微博.png"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<nav class="navbar navbar-default nav-style" role="navigation">
+    <div class="container" >
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <img class="navbar-brand" src="images/logo.png">
+        </div>
+        <div class="collapse navbar-collapse pull-right" style="padding: 0" id="example-navbar-collapse">
+            <ul class="nav navbar-nav" style="padding: 0">
+                <li><a href="index.html" >首页</a></li>
+                <li><a href="task8-2.html" >职业</a></li>
+                <li><a href="#" style="border-bottom:  solid #ffffff">推荐</a></li>
+                <li><a href="#">关于</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
    <div class="banner">
        <img src="images/banner2.png">
    </div>
@@ -139,7 +181,7 @@
            <div class="content-left">
            <p>合作企业</p>
            <ul>
-               <li><a href="#">土豆网</a></li>
+               <li class="active"><a href="#" style="color: #f9a372;">土豆网</a></li>
                <li><a href="#">土豆网</a></li>
                <li><a href="#">土豆网</a></li>
                <li><a href="#">土豆网</a></li>
