--- a/task8/index.html
+++ b/task8/index.html
@@ -164,7 +164,7 @@
         }
         .process p{
             display: inline-block;
-            width: 43%;
+            width: 45%;
             font-size: 10px;
             vertical-align: middle;
             letter-spacing: 2px;
@@ -249,8 +249,10 @@
         }
         .cooperation a{
             display: inline-block;
-            width: 19%;
+            width: 18%;
             height: 98px;
+            float: left;
+            margin: 0 1%;
         }
         .cooperation a:hover{
             box-shadow: -2px 0 5px  rgba(235,234,234,0.7), 2px  0 5px  rgba(235,234,234,0.7);
@@ -397,6 +399,7 @@
 <h1>如何学习</h1>
 <div class="process">
     <div class="container">
+        <div class="row">
             <div class="col-md-3 col-sm-4 col-style1">
                 <div class="circle" style="margin-left: 45px">1</div>
                 <p>匹配你现在的个人情况寻找合适自己的岗位</p>
@@ -435,6 +438,7 @@
                 <img src="images/trainright.png">
                 <div class="circle">8</div>
                 <p>完成职业技能，升级业界大牛</p>
+            </div>
             </div>
     </div>
 </div>
