--- a/task10/task10-表单.html
+++ b/task10/task10-表单.html
@@ -13,47 +13,82 @@
 
     <header>
         <div class="container">
-            <span>客服热线：010—594—10086</span>
-            <span>登录注册</span>
+            <span >客服热线：010—594—10086</span>
+            <span class="pull-right">
+                <a href="#" >登录</a>
+                <a href="#" >注册</a>
+            </span>
         </div>
     </header>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-style">
         <div class="container">
             <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-target="#menu" data-toggle="collapse" >
+                    <span class="sr-only"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
                 <a class="navbar-brand" href="#">51包装</a>
             </div>
-            <div>
-                <ul class="nav navbar-nav">
+            <div class="collapse navbar-collapse"style="padding: 0" id="menu">
+                <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">首页</a> </li>
-                    <li><a href="#">在线定制</a></li>
+                    <li><a href="#" class="active">在线定制</a></li>
                     <li><a href="#">标准箱</a></li>
                     <li><a href="#">品质保障</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+    <div class="container" style="margin-bottom: 20px">
+        <div class="col-md-offset-6">
+        <div class="stepinfo">
+            <div class="stepinfo-bar stepinfo-active"></div>
+            <div class="stepinfo-circle stepinfo-active">1</div>
+            <span class="stepinfo-text" style="color: #ff7f02">1.纸箱定制</span>
+        </div>
+
+        <div class="stepinfo">
+            <div class="stepinfo-bar"></div>
+            <div class="stepinfo-circle">2</div>
+            <span class="stepinfo-text">2.选择数量</span>
+        </div>
+        <div class="stepinfo">
+            <div class="stepinfo-bar"></div>
+            <div class="stepinfo-circle">3</div>
+            <span class="stepinfo-text">3.上传文件</span>
+        </div>
+        <div class="stepinfo">
+            <div class="stepinfo-bar"></div>
+            <div class="stepinfo-circle">4</div>
+            <span class="stepinfo-text">4.确定下单</span>
+        </div>
+        </div>
+    </div>
     <div class="container">
-<div class="box1"></div>
-<div class="box2" >
-<form role="form" class="form-inline">
-    <label class="radio-inline">
-    <input type="radio" name="optionsRadiosinlin" checked><span></span>选项 1
-    </label>
-    <label class="radio-inline">
-        <input type="radio" name="optionsRadiosinlin"  ><span></span>选项 2
-    </label>
-    <label class="radio-inline">
-        <input type="radio" name="optionsRadiosinlin"  ><span></span>选项 3
-    </label>
-    <select class=" box-select">
-        <option>查看详情</option>
-        <option>查看详情</option>
-        <option>查看详情</option>
-        <option>查看详情</option>
-    </select>
-</form>
-</div>
-<div class="box1"></div>
+        <p><span style="color: #1d7ad9">|</span>&nbsp;请按照以下步骤来定制纸箱</p>
+        <div class="box1-1">选择箱型</div>
+        <div class="box2" >
+            <form role="form" class="form-inline">
+                <label class="radio-inline">
+                    <input type="radio" name="optionsRadiosinlin" checked><span></span>选项 1
+                </label>
+                <label class="radio-inline">
+                    <input type="radio" name="optionsRadiosinlin"  ><span></span>选项 2
+                </label>
+                <label class="radio-inline">
+                    <input type="radio" name="optionsRadiosinlin"  ><span></span>选项 3
+                </label>
+                <select class=" box-select">
+                    <option>查看详情</option>
+                    <option>查看详情</option>
+                    <option>查看详情</option>
+                    <option>查看详情</option>
+                </select>
+            </form>
+        </div>
+<div class="box1-2">确定尺寸</div>
 <div class="box2">
 <form >
     <div class="radio" style="margin-bottom: 10px">
@@ -76,7 +111,7 @@
     </select>
 </form>
 </div>
-<div class="box1"></div>
+<div class="box1-3">选择材质</div>
 <div class="box2">
 <form class="form-inline">
     <label class="radio-inline"><input type="radio" name="optionsRadiosinline" checked><span></span>A瓦材质</label>
@@ -92,6 +127,38 @@
     </select>
 </form>
 </div>
+        <div class="box3">
+            <button class="next-step">下一步</button>
+        </div>
+</div>
+<footer>
+    <div class="container">
+        <div class="col-md-4 slogan">
+            51包装网—纸箱包装首选服务平台
+        </div>
+        <div class="col-md-4">
+            <ul>
+                <li><a href="#">关于我们</a></li>
+                <li><a href="#">配送流程</a></li>
+                <li><a href="#">联系我们</a></li>
+                <li><a href="#">下单指南</a></li>
+                <li><a href="#">媒体介绍</a></li>
+            </ul>
+        </div>
+        <div class="col-md-4" style="position: relative;">
+            <span>TEL:400-0000-000</span><br>
+            <span>企业QQ：123456789</span><br>
+            <span>微信号：XXXXXXX</span>
+            <img src="code.jpg">
+        </div>
+    </div>
+</footer>
+<div class="copyright">
+    <div class="container">
+        <p>
+             北京大美诚品包装科技有限公司Copyright ©201551baozhuang.comAll rights reserved.京公网安备 11011502002595号
+        </p>
+    </div>
 </div>
 </body>
 </html>
