--- a/task6/index.html
+++ b/task6/index.html
@@ -4,58 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
     <title>task6</title>
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="task6.css">
+    <script src="jquery.min.js"></script>
+    <script src="bootstrap.min.js"></script>
     <style type="text/css">
-        @media(max-width: 420px) {
-            html {
-                font-size: 8px;
-            }
-        }
-        body{
-            font-weight: bold;
-            max-width:720px;min-width: 320px;margin: 0 auto
-        }
-        .content1{
-            background: url("date.png") no-repeat;
-            background-size: 1.9rem;
-            padding-left: 4rem;
-            font-size: 2rem;
-            color: gray;
-        }
-        .content2{
-            padding-left: 2rem;
-            font-size: 2rem;
-        }
-        .content3{
-            float: right;
-            font-size: 2.5rem;
-            color: red;
-        }
-        .content4{
-            font-size: 2rem;
-            background: url("location.png") no-repeat;
-            background-size: 1.6rem 1.9rem;
-            padding-left: 4rem;
-            color: gray;
-        }
-        .content5{
-            padding :2rem 0
-        }
+
+
     </style>
 </head>
 <body>
 
-    <div >
-    <nav class="navbar navbar-default" role="navigation" style="text-align: center ;padding: 2rem 0;background: #5fc0cd;border: none;width: 100%;position: fixed;max-width:720px;min-width: 320px;margin: 0 auto">
-        <div class="btn-group">
-            <button type="button" class="btn btn-default" style="height: 6rem;width:10rem; font-size:3rem;color:#ffffff;background-color:#55a8b3; border-radius:1rem;border: none;">找雇主</button>
-            <button type="button" class="btn btn-default" style="height: 6rem;width:10rem; font-size:3rem;color:#5fc0cd;border-radius:1rem;left: -1rem;border: none;">找护工</button>
-        </div>
-        <img src="map.png" style="position:absolute;right:2rem;top:3rem;height:3rem;">
+    <header>
+    <nav class=" nav" role="navigation">
+        <button type="button" class="  nav-btn-L" >找雇主</button>
+        <button type="button" class="  nav-btn-R" >找护工</button>
+        <a href="#"><img src="map.png" class="map"></a>
     </nav>
-<div class="btn-group" style="width: 100%;position: fixed;top: 10rem;max-width:720px;min-width: 320px;margin: 0 auto">
+<div class="btn-group btn-group-dropdown">
     <div class="btn-group" style="width: 33.3% ">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" style="width: 100%;color: gray;height: 6rem;font-size: 3rem;font-weight: bold">所在地<span class="caret"></span>
+        <button type="button" class="btn btn-default dropdown-toggle btn-dropdown" data-toggle="dropdown">所在地<span class="caret"></span>
         </button>
         <ul class="dropdown-menu" role="menu">
             <li><a href="#">1</a></li>
@@ -64,7 +32,7 @@
         </ul>
     </div>
     <div class="btn-group" style="width: 33.3%">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" style="width: 100%;color: gray;height: 6rem;font-size: 3rem;font-weight: bold">住宿<span class="caret"></span>
+        <button type="button" class="btn btn-default dropdown-toggle btn-dropdown" data-toggle="dropdown" >住宿<span class="caret"></span>
         </button>
         <ul class="dropdown-menu" role="menu">
             <li><a href="#">1</a></li>
@@ -73,7 +41,7 @@
         </ul>
     </div>
     <div class="btn-group" style="width: 33.3%" >
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" style="width: 100%;color: gray;height: 6rem;font-size: 3rem;font-weight: bold">病人情况<span class="caret"></span>
+        <button type="button" class="btn btn-default dropdown-toggle btn-dropdown" data-toggle="dropdown" >病人情况<span class="caret"></span>
         </button>
         <ul class="dropdown-menu" role="menu">
             <li><a href="#">1</a></li>
@@ -82,53 +50,59 @@
         </ul>
     </div>
 </div>
-    </div>
-    <ul class="list-unstyled" style="padding-top: 15rem;max-width:720px;min-width: 320px;margin: 0 auto" >
-        <li style="padding: 2rem;border-bottom: solid thin;">
+    </header>
+    <div class="content">
+    <ul class="list-unstyled">
+        <li class="list">
             <div class="content1">服务日期</div>
             <div class="content5">
             <span class="content2" >2015-7-5至2015-7-12</span>
-            <span class="content3">25元/小时</span>
+            <span class="content3">
+                25元/小时
+                <a href="#"><img src="icon-enter.png"></a>
+            </span>
             </div>
             <div class="content4">北京·通州·果园</div>
         </li>
-        <li style="padding: 2rem;border-bottom: solid thin">
+        <li class="list">
             <div class="content1">服务日期</div>
             <div class="content5">
             <span class="content2">2015-7-5至2015-7-12</span>
-            <span class="content3">25元/小时</span>
+            <span class="content3">
+                25元/小时
+                <a href="#"><img src="icon-enter.png"></a>
+            </span>
             </div>
             <div class="content4">北京·通州·果园</div>
         </li>
-        <li style="padding: 2rem;border-bottom: solid thin">
+        <li class="list">
             <div class="content1">服务日期</div>
             <div class="content5">
-            <span class="content2">2015-7-5至2015-7-12</span>
-            <span class="content3">25元/小时</span>
+                <span class="content2">2015-7-5至2015-7-12</span>
+                <span class="content3">
+                    25元/小时
+                    <a href="#"><img src="icon-enter.png"></a>
+                </span>
             </div>
             <div class="content4">北京·通州·果园</div>
         </li>
-        <li style="padding: 2rem;border-bottom: solid thin;margin-bottom: 10rem ;">
+        <li class="list">
             <div class="content1">服务日期</div>
             <div class="content5">
             <span class="content2">2015-7-5至2015-7-12</span>
-            <span class="content3">25元/小时</span>
+            <span class="content3">
+                25元/小时
+                <a href="#"><img src="icon-enter.png"></a>
+            </span>
             </div>
             <div class="content4">北京·通州·果园</div>
         </li>
     </ul>
-
-<div style="text-align:center;padding:2rem 0;position: fixed;bottom:0;width: 100%;background: whitesmoke;max-width:720px;min-width: 320px;margin: 0 auto">
-    <div style="float: left;padding-left:5rem "><img src="home.png"><br><span>首页</span></div>
-    <div style="
-    width: 5rem;
-    height:5rem;
-    text-align: center;
-    border-radius: 50%;
-    background:url(Write.png) no-repeat 1rem #5fc0cd;
-    display: inline-block"></div>
-    <div style="float: right;padding-right: 5rem"><img src="mine.png"><br><span>我的</span></div>
-</div>
-
+    </div>
+<footer style="">
+    <a href="#" class="index"> <img src="home.png"><br><span>首页</span></a>
+    <a href="#" class="editor"></a>
+    <a href="#" class="mine"><img src="mine.png"><br><span>我的</span></a>
+</footer>
 </body>
 </html>
